[package]
name = "leasehund"
version = "0.4.0"
edition = "2024"
authors = ["rttf <contact@rttf.dev>"]
description = "A lightweight, embedded-friendly DHCP server implementation for Rust no_std environments"
documentation = "https://docs.rs/leasehund"
homepage = "https://github.com/rttfd/leasehund"
repository = "https://github.com/rttfd/leasehund"
license = "MIT"
keywords = ["dhcp", "embedded", "no-std", "networking", "embassy"]
readme = "README.md"

[dependencies]
embassy-net = { version = "0.9.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv4",
] }
embassy-time = "0.5.1"
hash32 = "0.3.1"
heapless = "0.9.2"
smoltcp = { version = "0.13.0", default-features = false, features = [
    "proto-ipv4",
    "proto-dhcpv4",
    "socket-udp",
] }
defmt = { version = "1.0", optional = true }

[features]
defmt = ["dep:defmt", "embassy-net/defmt"]

[dev-dependencies]
